<resources>
    <string name="app_name">绩时查</string>
    <string name="establishing_connection">正在建立连接</string>
    <string name="loading">加载中…</string>
    <string name="options">操作</string>
    <string name="rh_home">内蒙古健康码</string>
    <string name="news_information">新闻资讯</string>
    <string name="information">资讯</string>
    <string name="my_doctor">我的医生</string>
    <string name="health_records">健康档案</string>
    <string name="my_reservation">我的预约</string>
    <string name="medical_insurance">医疗保险</string>
    <string name="term_of_validity">有&#160;效&#160;期</string>
    <string name="card_holder">持卡人</string>
    <string name="no_login">未登录</string>
    <string name="resident_health_card">内蒙古健康码</string>
    <string name="designated_hospital">定点医院</string>
    <string name="discount_merchant">优惠商家</string>
    <string name="card_site">办卡网点</string>
    <string name="notice">通知公告</string>
    <string name="rh_appointment_text">预约挂号</string>
    <string name="rh_appointment_text1">足不出户 快速挂号</string>
    <string name="rh_friendsinformation_text">就诊人信息</string>
    <string name="rh_friendsinformation_text1">为亲友预约挂号</string>
    <string name="rh_nearbydrugstore_text">附近药店</string>
    <string name="rh_nearbydrugstore_text1">自动定位周边药店</string>
    <string name="rh_finddoctor_text">找医生</string>
    <string name="rh_finddoctor_text1">指定医生 精准预约</string>
    <string name="rh_myrating_text">我的评价</string>
    <string name="rh_myrating_text1">医评心声 开放真实</string>
    <string name="rh_healthrecord_text">健康记录</string>
    <string name="rh_my_bracelet">智能手环</string>
    <string name="rh_hotinformation_text">热门资讯</string>
    <string name="rh_hotinformation_text2">更多</string>
    <string name="health_certificate_tip">您的健康券已到账，请按时持券接收服务~</string>
    <string name="networkException_and_tryAgain">网络通讯异常，请稍后再试!</string>
    <string name="locate_current_location">点击定位当前地点</string>
    <string name="select_area">选择地区</string>
    <string name="handan_city">邯郸市</string>
    <string name="no_obtain_zone_information">未取到区划信息！</string>
    <string name="session_expired">session已过期!</string>
    <string name="select_position">选择位置</string>
    <string name="anhui_province">安徽省</string>
    <string name="appointment">预约</string>
    <string name="times">次</string>
    <string name="search_hospital">搜索医院</string>
    <string name="no_hospital_information">暂无医院信息</string>
    <string name="obtain_department_failed">获取科室列表失败</string>
    <string name="focus_on_success">关注成功</string>
    <string name="cancel_focus_on_success">取消关注成功</string>
    <string name="beijing_city">北京市</string>
    <string name="satisfaction_degree">满意度</string>
    <string name="requestParameter_missingFor_hospitalId">请求参数缺少医院ID</string>
    <string name="department_information_empty">科室信息为空</string>
    <string name="department_list">科室列表</string>
    <string name="hospital_profile">医院简介</string>
    <string name="in_navigation">院内导航</string>
    <string name="outpatient_care_procedure">门诊就医流程</string>
    <string name="inout_hospital_procedure">门诊就医流程</string>
    <string name="back_medicine_procedure">退药流程</string>
    <string name="pack_up">收起</string>
    <string name="more">更多</string>
    <string name="features">特色:</string>
    <string name="sorry_no_result">抱歉，未能找到结果</string>
    <string name="no_bus_line">暂无公交线路</string>
    <string name="not_support_bus_search">该城市不支持公交搜索</string>
    <string name="not_support_crosscity_bus">不支持跨城市公交</string>
    <string name="up_finish_tooclose">起终点太近</string>
    <string name="my_location">我的位置</string>
    <string name="drupstore_name">药店名称</string>
    <string name="comprehensive_sequence">综合排序</string>
    <string name="filter">筛选</string>
    <string name="no_source_information">暂无号源信息</string>
    <string name="no_source">已无号源</string>
    <string name="no_ac">已无区划</string>
    <string name="forenoon">上午</string>
    <string name="afternoon">下午</string>
    <string name="yuan">元</string>
    <string name="left">余</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="appointment_time">预约时间</string>
    <string name="unlimited_time">不限时间</string>
    <string name="doctor_title">医生职称</string>
    <string name="all_title">全部职称</string>
    <string name="chief_physician">主任医师</string>
    <string name="half_chief_physician">副主任医师</string>
    <string name="attending_physician">主治医师</string>
    <string name="half_attending_physician">医师</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="scheduling">排班</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="no_introduction">暂无简介</string>
    <string name="source_detail">号源详情</string>
    <string name="look_detail">查看详情</string>
    <string name="up_detail">收起详情</string>
    <string name="select_appointment_time">选择预约时间</string>
    <string name="recommand_for_you">为您推荐</string>
    <string name="no_recommand_doctor">暂无推荐医生</string>
    <string name="appointment_failed">预约失败</string>
    <string name="fillin_patient_information">填写就诊人信息</string>
    <string name="putpatient_service_time">门诊时间</string>
    <string name="source_fee">挂号费用</string>
    <string name="know_the_rule">我已了解并同意以下规则</string>
    <string name="appointment_rule_detail">预约成功后，请您在就诊当天的指定时间段前，凭就诊人的身份证原件到医院指定地点取号，逾期作废</string>
    <string name="appointment_rule_detail1">1.预约成功后，请您在就诊当天的指定时间段前，凭就诊人的身份证原件到医院指定地点取号，逾期作废</string>
    <string name="appointment_rule_detail2">逾期作废</string>
    <string name="appointment_rule_detail3">2.如果您在就诊当天不能前往医院取号就诊，请在就诊日的前一天下午4:00前申请退号</string>
    <string name="appointment_rule_detail4">申请退号</string>
    <string name="patient_information">就诊人信息</string>
    <string name="alter_patient_information">更改就诊人</string>
    <string name="sf_card_no">身份证号</string>
    <string name="telephone">联系电话</string>
    <string name="medical_card_no">诊疗卡号</string>
    <string name="select_medical_card">请选择就诊卡</string>
    <string name="order_detail">订单详情</string>
    <string name="appointment_success">预约成功，请按时就诊</string>
    <string name="request1">请在</string>
    <string name="request2">之前到医院取号就诊</string>
    <string name="wait_pingjia">待评价</string>
    <string name="give_perfect_pingjia">来给个完美的评价吧！</string>
    <string name="already_cancel">已取消</string>
    <string name="already_jujue">已拒绝</string>
    <string name="already_cancel_detail">您的订单已取消，感谢您的使用</string>
    <string name="no_jiuzhen">未就诊</string>
    <string name="no_jiuzhen_detail">因您没有按时就诊，您的订单已被取消</string>
    <string name="already_pingjia">已评价</string>
    <string name="already_pingjia_detail">您的订单已评价！</string>
    <string name="already_tingzhen">已停诊</string>
    <string name="already_tingzhen_detail">您的订单已停诊，如给您带来不便，请谅解!</string>
    <string name="appointment_information">预约信息</string>
    <string name="clinic_hospital">就诊医院</string>
    <string name="clinic_department">就诊科室</string>
    <string name="clinic_doctor">就诊医生</string>
    <string name="clinic_time">就诊时间</string>
    <string name="patient">就诊人</string>
    <string name="warm_prompt">温馨提示</string>
    <string name="cancel_appointment">取消预约</string>
    <string name="obtain_doctor_list_failed">获取医生列表失败</string>
    <string name="find_doctor">找医生</string>
    <string name="search_hospital_department_doctor">搜索医院、科室、医生</string>
    <string name="no_doctor_information">暂无医生信息</string>
    <string name="index_praise">好评指数</string>
    <string name="be_good_at">擅长</string>
    <string name="praise">好评</string>
    <string name="half_praise">中评</string>
    <string name="no_praise">差评</string>
    <string name="appointment_count">预约量</string>
    <string name="doctor_brief">医生简介</string>
    <string name="doctor_evaluate">医生评价</string>
    <string name="no_doctor_evaluate">暂无医生评价</string>
    <string name="loading_more">加载更多</string>
    <string name="login_success">登陆成功</string>
    <string name="init_userdata_failed">初始化用户数居失败</string>
    <string name="login_tip1">请填写公共卫生服务地以获取健康档案记录</string>
    <string name="login_user">手机号</string>
    <string name="login_password">密码</string>
    <string name="login_entry">登    录</string>
    <string name="login_remember_password">记住密码</string>
    <string name="login_forget_password">忘记密码?</string>
    <string name="login_regist">免费注册</string>
    <string name="re_get">重新获取</string>
    <string name="confirm_password_not_empty">确认密码不能为空</string>
    <string name="confirm_password_wrong">确认密码错误</string>
    <string name="find_title">找回密码</string>
    <string name="find_password_success">找回密码成功</string>
    <string name="find_password">请输入新密码</string>
    <string name="find_again_password">请确认新密码</string>
    <string name="find_submit">提    交</string>
    <string name="find_successs">恭喜您密码重置成功！</string>
    <string name="code_desc">正常情况下,您可以通过短信方式接收验证码,但由于某些原因(如:您的手机安装了短信拦截软件,您曾退订过某些短信通道等),导致无法正常接收到验证码短信时,您可以拨打<font color="0xFF0000">12320</font>卫生热线请求人工帮助,谢谢！</string>
    <string name="regist_title">我要注册</string>
    <string name="regist_realName">填写本人真实姓名</string>
    <string name="regist_idnumber">身份证号码</string>
    <string name="regist_password">8-16个字符，包含大小写字符和数字</string>
    <string name="reg_again_password">请确认密码</string>
    <string name="regist_phone">请输入手机号码</string>
    <string name="regist_verification_code">请输入验证码</string>
    <string name="regist_get_verification_code">获取验证码</string>
    <string name="regist_re_get_verification_code">重新发送</string>
    <string name="regist_agree_terms"><u>同意服务条款</u></string>
    <string name="not_receive_security_code">收不到验证码?</string>
    <string name="regist_regist">注册</string>
    <string name="regist_term_title">用户注册协议</string>
    <string name="regist_term_title_mz">免责声明</string>
    <string name="username_not_empty">用户名不能为空</string>
    <string name="sf_card_not_empty">身份证号不能为空</string>
    <string name="sf_card_format_wrong">身份证号码格式有误</string>
    <string name="password_not_empty">密码不能为空</string>
    <string name="password_not_same">两次输入的密码不一致</string>
    <string name="verification_not_empty">请输入验证码</string>
    <string name="agree_clause">请同意条款</string>
    <string name="verification_not_received_detail"><font color="0x666666">正常情况下,您可以通过短信方式接收验证码,但由于某些原因(如:您的手机安装了短信拦截软件,您曾退订过某些短信通道等),导致无法正常接收到验证码短信时,您可以拨打</font><font color="0xFF0000">12320</font><font color="0x666666">卫生热线请求人工帮助,谢谢！新疆区域内,您可以拨打居民健康客服电话:18199325250,或在各区县居民健康APP微信群里直接联系居民健康客服!谢谢!</font></string>
    <string name="what_to_do_if_not_received_verification">验证码收不到怎么办？</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="old_password">旧密码：</string>
    <string name="input_yuan_password">请输入原密码</string>
    <string name="new_password">新密码：</string>
    <string name="confirm_password">确认密码：</string>
    <string name="reinput_new_password">请重新输入新密码</string>
    <string name="tijiao">提&#160;&#160;交</string>
    <string name="login_success_tip">密码修改成功，\n下次登录请使用新密码</string>
    <string name="password_character_restrict">密码长度6-16个字符，要包含字母和数字</string>
</resources>