<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical">

    <include layout="@layout/jkx_public_title_home" />
    <!-- 正文 -->

    <LinearLayout
        android:id="@+id/find_layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="22dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/find_phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:cursorVisible="true"
            android:textCursorDrawable="@drawable/text_cursor"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_register_edit"
            android:hint="@string/regist_phone"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="10dp"
            android:textSize="14sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/find_Validate_code"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/text_cursor"
                android:background="@drawable/bg_register_edit"
                android:hint="@string/regist_verification_code"
                android:inputType="phone"
                android:maxLength="6"
                android:paddingLeft="10dp"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_getValidateCode"
                android:layout_width="100dp"
                android:layout_height="36dp"
                android:layout_marginLeft="12dp"
                android:background="@drawable/bg_shap_button_1"
                android:text="@string/regist_get_verification_code"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y6"
            android:visibility="gone"
            android:layout_marginLeft="@dimen/x2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="收不到短信？使用"
                android:textColor="#999999"
                android:textSize="@dimen/x13" />

            <TextView
                android:id="@+id/voice_remind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x2"
                android:text="语音验证码"
                android:textColor="@color/bg_green"
                android:textSize="@dimen/x13" />


        </LinearLayout>

        <EditText
            android:id="@+id/find_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:cursorVisible="true"
            android:textCursorDrawable="@drawable/text_cursor"
            android:background="@drawable/bg_register_edit"
            android:hint="@string/find_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textSize="14sp" />


        <EditText
            android:id="@+id/find_again_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:cursorVisible="true"
            android:textCursorDrawable="@drawable/text_cursor"
            android:background="@drawable/bg_register_edit"
            android:hint="@string/find_again_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textSize="14sp" />

        <Button
            android:id="@+id/find_submit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_shap_button_1"
            android:text="@string/find_submit"
            android:textColor="#fff"
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/find_success_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_successs"
            android:textColor="#FF0000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/find_login_entry"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:background="@color/bg_green"
            android:text="@string/login_entry"
            android:textColor="#fff"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>