<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/jkx_public_title_home" />

    <LinearLayout
        android:id="@+id/c_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#ffffff"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:text="@string/old_password"
                android:textColor="#333333"
                android:textSize="@dimen/x15" />

            <EditText
                android:id="@+id/old_password"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@null"
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/text_cursor"
                android:hint="@string/input_yuan_password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="#333333"
                android:textColorHint="#dddddd"
                android:textSize="@dimen/x15" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:text="@string/new_password"
                android:textColor="#333333"
                android:textSize="@dimen/x15" />

            <EditText
                android:id="@+id/new_password"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/text_cursor"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/input_new_password"
                android:paddingLeft="10dp"
                android:password="true"
                android:singleLine="true"
                android:textColor="#333333"
                android:textColorHint="#dddddd"
                android:textSize="@dimen/x15" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:text="@string/confirm_password"
                android:textColor="#333333"
                android:textSize="@dimen/x15" />

            <EditText
                android:id="@+id/again_password"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@null"
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/text_cursor"
                android:hint="@string/reinput_new_password"
                android:paddingLeft="10dp"
                android:password="true"
                android:singleLine="true"
                android:textColor="#333333"
                android:textColorHint="#dddddd"
                android:textSize="@dimen/x15" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray" />
    </LinearLayout>

    <Button
        android:id="@+id/commit_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/bg_shap_button_1"
        android:gravity="center"
        android:minHeight="40dip"
        android:text="@string/tijiao"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/again_succces"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/bg_corner"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:padding="10dip"
        android:text="@string/login_success_tip"
        android:textSize="14sp"
        android:visibility="gone" />

</LinearLayout>